// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance accent 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance basic 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose accent 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-k5uu2e=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1oqz9a6=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose basic 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-9n15zz=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1s4vcbp=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose short text 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-9n15zz=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1s4vcbp=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Short
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose tailPosition topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-9n15zz=""
    >
      <button
        aria-label="Close tooltip"
        data-css-1s4vcbp=""
        onClick={[Function]}
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 7.41L16.59 6 12 10.59 7.41 6 6 7.41 10.59 12 6 16.59 7.41 18 12 13.41 16.59 18 18 16.59 13.41 12"
          />
        </svg>
      </button>
      Consectetur adipisicing elit, sed do ab eiusmod tempor incididunt ut
      <div
        aria-hidden={true}
        data-css-1ojgf6e=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-fsk0rv=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1llk2dr=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent bottomRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1pas0i=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-y4gm4w=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1bem3lj=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition accent topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-129o3ii=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-17rqs1f=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1lnac5l=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-3q3si=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic bottomRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-3pxnq4=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topCenter 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-148few3=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-g2irhy=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots tailPosition basic topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "padding": "48px",
      }
    }
  >
    <div
      data-css-7zj9s4=""
    >
      Some text
      <div
        aria-hidden={true}
        data-css-1ojgf6e=""
      />
    </div>
  </div>
</div>
`;
